src/org/ffmpeg/avfilter/AvfilterLibrary.java

	/**
	 * Original signature : <code>AVFilter* avfilter_get_by_name(const char*)</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:760</i>
	 */
	public static Pointer<AVFilter > avfilter_get_by_name(Pointer<Byte > name) {
		return Pointer.pointerToAddress(avfilter_get_by_name(Pointer.getPeer(name)), AVFilter.class);
	}
	@Ptr 
	protected native static long avfilter_get_by_name(@Ptr long name);
	/**
	 * Iterate over all registered filters.<br>
	 * @return If prev is non-NULL, next registered filter after prev or NULL if<br>
	 * prev is the last filter. If prev is NULL, return the first registered filter.<br>
	 * Original signature : <code>AVFilter* avfilter_next(const AVFilter*)</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:767</i>
	 */
	public static Pointer<AVFilter > avfilter_next(Pointer<AVFilter > prev) {
		return Pointer.pointerToAddress(avfilter_next(Pointer.getPeer(prev)), AVFilter.class);
	}
	@Ptr 
	protected native static long avfilter_next(@Ptr long prev);
	/**
	 * If filter is NULL, returns a pointer to the first registered filter pointer,<br>
	 * if filter is non-NULL, returns the next pointer after filter.<br>
	 * If the returned pointer points to NULL, the last registered filter<br>
	 * was already reached.<br>
	 * @deprecated use avfilter_next()<br>
	 * Original signature : <code>AVFilter** av_filter_next(AVFilter**)</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:776</i>
	 */
	public static Pointer<Pointer<AVFilter > > av_filter_next(Pointer<Pointer<AVFilter > > filter) {
		return Pointer.pointerToAddress(av_filter_next(Pointer.getPeer(filter)), DefaultParameterizedType.paramType(Pointer.class, AVFilter.class));
	}
	@Ptr 
	protected native static long av_filter_next(@Ptr long filter);
	/**
	 * Create a filter instance.<br>
	 * * @param filter_ctx put here a pointer to the created filter context<br>
	 * on success, NULL on failure<br>
	 * @param filter    the filter to create an instance of<br>
	 * @param inst_name Name to give to the new instance. Can be NULL for none.<br>
	 * @return >= 0 in case of success, a negative error code otherwise<br>
	 * @deprecated use avfilter_graph_alloc_filter() instead<br>
	 * Original signature : <code>int avfilter_open(AVFilterContext**, AVFilter*, const char*)</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:787</i>
	 */
	public static int avfilter_open(Pointer<Pointer<AVFilterContext > > filter_ctx, Pointer<AVFilter > filter, Pointer<Byte > inst_name) {
		return avfilter_open(Pointer.getPeer(filter_ctx), Pointer.getPeer(filter), Pointer.getPeer(inst_name));
	}
	protected native static int avfilter_open(@Ptr long filter_ctx, @Ptr long filter, @Ptr long inst_name);
	/**
	 * Initialize a filter.<br>
	 * * @param filter the filter to initialize<br>
	 * @param args   A string of parameters to use when initializing the filter.<br>
	 *               The format and meaning of this string varies by filter.<br>
	 * @param opaque Any extra non-string data needed by the filter. The meaning<br>
	 *               of this parameter varies by filter.<br>
	 * @return       zero on success<br>
	 * Original signature : <code>int avfilter_init_filter(AVFilterContext*, const char*, void*)</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:798</i>
	 */
	public static int avfilter_init_filter(Pointer<AVFilterContext > filter, Pointer<Byte > args, Pointer<? > opaque) {
		return avfilter_init_filter(Pointer.getPeer(filter), Pointer.getPeer(args), Pointer.getPeer(opaque));
	}
	protected native static int avfilter_init_filter(@Ptr long filter, @Ptr long args, @Ptr long opaque);
	/**
	 * Initialize a filter with the supplied parameters.<br>
	 * * @param ctx  uninitialized filter context to initialize<br>
	 * @param args Options to initialize the filter with. This must be a<br>
	 *             ':'-separated list of options in the 'key=value' form.<br>
	 *             May be NULL if the options have been set directly using the<br>
	 *             AVOptions API or there are no options that need to be set.<br>
	 * @return 0 on success, a negative AVERROR on failure<br>
	 * Original signature : <code>int avfilter_init_str(AVFilterContext*, const char*)</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:809</i>
	 */
	public static int avfilter_init_str(Pointer<AVFilterContext > ctx, Pointer<Byte > args) {
		return avfilter_init_str(Pointer.getPeer(ctx), Pointer.getPeer(args));
	}
	protected native static int avfilter_init_str(@Ptr long ctx, @Ptr long args);
	/**
	 * Initialize a filter with the supplied dictionary of options.<br>
	 * * @param ctx     uninitialized filter context to initialize<br>
	 * @param options An AVDictionary filled with options for this filter. On<br>
	 *                return this parameter will be destroyed and replaced with<br>
	 *                a dict containing options that were not found. This dictionary<br>
	 *                must be freed by the caller.<br>
	 *                May be NULL, then this function is equivalent to<br>
	 *                avfilter_init_str() with the second parameter set to NULL.<br>
	 * @return 0 on success, a negative AVERROR on failure<br>
	 * * @note This function and avfilter_init_str() do essentially the same thing,<br>
	 * the difference is in manner in which the options are passed. It is up to the<br>
	 * calling code to choose whichever is more preferable. The two functions also<br>
	 * behave differently when some of the provided options are not declared as<br>
	 * supported by the filter. In such a case, avfilter_init_str() will fail, but<br>
	 * this function will leave those extra options in the options AVDictionary and<br>
	 * continue as usual.<br>
	 * Original signature : <code>int avfilter_init_dict(AVFilterContext*, AVDictionary**)</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:829</i>
	 */
	public static int avfilter_init_dict(Pointer<AVFilterContext > ctx, Pointer<Pointer<AVDictionary > > options) {
		return avfilter_init_dict(Pointer.getPeer(ctx), Pointer.getPeer(options));
	}
	protected native static int avfilter_init_dict(@Ptr long ctx, @Ptr long options);
	/**
	 * Free a filter context. This will also remove the filter from its<br>
	 * filtergraph's list of filters.<br>
	 * * @param filter the filter to free<br>
	 * Original signature : <code>void avfilter_free(AVFilterContext*)</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:836</i>
	 */
	public static void avfilter_free(Pointer<AVFilterContext > filter) {
		avfilter_free(Pointer.getPeer(filter));
	}
	protected native static void avfilter_free(@Ptr long filter);
	/**
	 * Insert a filter in the middle of an existing link.<br>
	 * * @param link the link into which the filter should be inserted<br>
	 * @param filt the filter to be inserted<br>
	 * @param filt_srcpad_idx the input pad on the filter to connect<br>
	 * @param filt_dstpad_idx the output pad on the filter to connect<br>
	 * @return     zero on success<br>
	 * Original signature : <code>int avfilter_insert_filter(AVFilterLink*, AVFilterContext*, unsigned, unsigned)</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:846</i>
	 */
	public static int avfilter_insert_filter(Pointer<AVFilterLink > link, Pointer<AVFilterContext > filt, int filt_srcpad_idx, int filt_dstpad_idx) {
		return avfilter_insert_filter(Pointer.getPeer(link), Pointer.getPeer(filt), filt_srcpad_idx, filt_dstpad_idx);
	}
	protected native static int avfilter_insert_filter(@Ptr long link, @Ptr long filt, int filt_srcpad_idx, int filt_dstpad_idx);
	/**
	 * Copy the frame properties of src to dst, without copying the actual<br>
	 * image data.<br>
	 * * @return 0 on success, a negative number on error.<br>
	 * Original signature : <code>int avfilter_copy_frame_props(AVFilterBufferRef*, const AVFrame*)</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:853</i>
	 */
	public static int avfilter_copy_frame_props(Pointer<AVFilterBufferRef > dst, Pointer<AVFrame > src) {
		return avfilter_copy_frame_props(Pointer.getPeer(dst), Pointer.getPeer(src));
	}
	protected native static int avfilter_copy_frame_props(@Ptr long dst, @Ptr long src);
	/**
	 * Copy the frame properties and data pointers of src to dst, without copying<br>
	 * the actual data.<br>
	 * * @return 0 on success, a negative number on error.<br>
	 * Original signature : <code>int avfilter_copy_buf_props(AVFrame*, const AVFilterBufferRef*)</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:860</i>
	 */
	public static int avfilter_copy_buf_props(Pointer<AVFrame > dst, Pointer<AVFilterBufferRef > src) {
		return avfilter_copy_buf_props(Pointer.getPeer(dst), Pointer.getPeer(src));
	}
	protected native static int avfilter_copy_buf_props(@Ptr long dst, @Ptr long src);
	/**
	 * @return AVClass for AVFilterContext.<br>
	 * * @see av_opt_find().<br>
	 * Original signature : <code>AVClass* avfilter_get_class()</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:866</i>
	 */
	public static Pointer<AVClass > avfilter_get_class() {
		return Pointer.pointerToAddress(avfilter_get_class$2(), AVClass.class);
	}
	@Ptr 
	protected native static long avfilter_get_class$2();
	/**
	 * Allocate a filter graph.<br>
	 * Original signature : <code>AVFilterGraph* avfilter_graph_alloc()</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:945</i>
	 */
	public static Pointer<AVFilterGraph > avfilter_graph_alloc() {
		return Pointer.pointerToAddress(avfilter_graph_alloc$2(), AVFilterGraph.class);
	}
	@Ptr 
	protected native static long avfilter_graph_alloc$2();
	/**
	 * Create a new filter instance in a filter graph.<br>
	 * * @param graph graph in which the new filter will be used<br>
	 * @param filter the filter to create an instance of<br>
	 * @param name Name to give to the new instance (will be copied to<br>
	 *             AVFilterContext.name). This may be used by the caller to identify<br>
	 *             different filters, libavfilter itself assigns no semantics to<br>
	 *             this parameter. May be NULL.<br>
	 * * @return the context of the newly created filter instance (note that it is<br>
	 *         also retrievable directly through AVFilterGraph.filters or with<br>
	 *         avfilter_graph_get_filter()) on success or NULL on failure.<br>
	 * Original signature : <code>AVFilterContext* avfilter_graph_alloc_filter(AVFilterGraph*, const AVFilter*, const char*)</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:959</i>
	 */
	public static Pointer<AVFilterContext > avfilter_graph_alloc_filter(Pointer<AVFilterGraph > graph, Pointer<AVFilter > filter, Pointer<Byte > name) {
		return Pointer.pointerToAddress(avfilter_graph_alloc_filter(Pointer.getPeer(graph), Pointer.getPeer(filter), Pointer.getPeer(name)), AVFilterContext.class);
	}
	@Ptr 
	protected native static long avfilter_graph_alloc_filter(@Ptr long graph, @Ptr long filter, @Ptr long name);
	/**
	 * Get a filter instance identified by instance name from graph.<br>
	 * * @param graph filter graph to search through.<br>
	 * @param name filter instance name (should be unique in the graph).<br>
	 * @return the pointer to the found filter instance or NULL if it<br>
	 * cannot be found.<br>
	 * Original signature : <code>AVFilterContext* avfilter_graph_get_filter(AVFilterGraph*, const char*)</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:968</i>
	 */
	public static Pointer<AVFilterContext > avfilter_graph_get_filter(Pointer<AVFilterGraph > graph, Pointer<Byte > name) {
		return Pointer.pointerToAddress(avfilter_graph_get_filter(Pointer.getPeer(graph), Pointer.getPeer(name)), AVFilterContext.class);
	}
	@Ptr 
	protected native static long avfilter_graph_get_filter(@Ptr long graph, @Ptr long name);
